# holloway

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: tab_provider.dart
lib/src/content/: content_renderer.dart  index.dart
lib/src/desktop/: desktop_control_bar.dart  desktop_layout.dart  desktop_tab_bar.dart
lib/src/mobile/: mobile_bottom_nav.dart  mobile_layout.dart  mobile_tab_view.dart
lib/src/models/: tab_info.dart
lib/src/parsers/: finger_parser.dart  gemini_parser.dart  gopher_parser.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart  (+1 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: exposed_functions.rs  mod.rs  simple.rs
rust/src/api/functions/: mod.rs  navigate_internal.rs
rust/src/api/protocols/: finger.rs  gemini.rs  gopher.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_holloway.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_holloway.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+8 files in other folders)
